--- a/Rawr-test/Info.plist
+++ b/Rawr-test/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>BASE_URL</key>
+    <string>${BASE_URL}</string>
+    <key>RAW_KEY</key>
+    <string>${RAW_KEY}</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
